- the zoom control was moved to bottom left so that marker popups dont collide with it on mobile (issue with z-index fiddling) - the list was removed in case of small screen - the share elements were moved to a specific template for getting loaded only on item open

--- a/css/styles-small-screen.css
+++ b/css/styles-small-screen.css
@@ -5,6 +5,8 @@
         display: block;
     }
     .map-popup .info-line.more{
+	 display: none;
+	 /*
          display: block;
          float: right;
          width: 25px;
@@ -12,6 +14,7 @@
          background: url(../images/picto-list.png) 50% 50% no-repeat;
          margin-right: 15px;
          cursor: pointer;
+	 */
     }
     .sidebar .sidebar-content .un-lieu .view-on-map{
         display: none;
@@ -110,6 +113,15 @@
         {
         display: none;
     }
+    .description-field {
+	padding-top:6px;
+	padding-bottom:6px;
+    }
+
+    .leaflet-popup {
+	max-width:300px;
+    }
+
 }
 
 
